[current]
* .games file: format changed to json (allows for custom data)
* bot update: -n/--new_name renames bot (this is only partially supported as this doesn't change the bot executable file; warning: potentially very slow as this has to update whole .games file)
[0.2.0]
* add support for getting error data (requires update of play_game script!)
* run: can run a fixed number of games with --games
* show: support for custom leaderboard, new leaderboard config option defines columns to show
* show: you can see bot's creation date, change the format with date_format config option
* show: --limit -> --best
* show: added --recent to show the most recent X created bots
* bugfix: psyleague show --active had no effect
* bugfix: logs show your local timezone now
[0.1.1]
* bugfixes: psyleague config, psyleague bot update -d, installation, linux support
[0.1.0] 
* initial version